--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,2 +1,5 @@
-<h1>{{title}}</h1>
-<p>Hello {{ name }},Welcome to {{title}}</p>
+<main>
+    <div id="product-list" class "product-list"></div>
+    <img src="https://fakeimg.pl/300/" alt="undetermined website image">
+</main>
+    
