--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -4,8 +4,13 @@
     <title>{{title}}</title>
     <link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">
     <link rel='stylesheet' href='/public/css/style.css' />
+    <script src="application/public/js/validation.js"></script>
   </head>
+
   <body>
-    {{{body}}}
+      {{>header}}
+      {{>nav}}
+      {{{body}}}
+      {{>footer}} 
   </body>
 </html>
