--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,5 +1,5 @@
 <main>
     <div id="product-list" class "product-list"></div>
-    <img src="https://fakeimg.pl/300/" alt="undetermined website image">
+    <img src="https://fakeimg.pl/300/" alt="undetermined website image" class="center" width="200px" height="200px">
 </main>
     
